# gcsf

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  dist-workspace.toml  gcsf.service  sample_config.toml
.github/workflows/: release.yml  rust.yml
ci/: before_deploy.sh
data/: sample_config.toml
paper/: conclusion.tex  introduction.tex  main.tex  performance_evaluation.tex  proposed_approach.tex  state_of_the_art.tex
src/: cli.yml  gcsf.rs  lib.rs  main.rs  tests.rs
src/gcsf/: auth.rs  config.rs  drive_facade.rs  drive_fetcher.rs  file.rs  file_manager.rs  filesystem.rs  mod.rs
src/gcsf/fetcher/: data_fetcher.rs  google_drive_fetcher.rs  in_memory_fetcher.rs  mod.rs
tests/integration/: README.md  test_filesystem_operations.sh
thesis/: abstract.tex  bibliography.bib  conclusion.tex  cover.tex  cover_ro.tex  fileattr.rs  fuse.h  fuse.rs  fuse_lowlevel.h  introduction.tex  listings-rust.sty  main.tex  performance_evaluation.tex  proposed_approach.tex  setattr.rs  state_of_the_art.tex
thesis/images/: gcsf_architecture.bob
