[package]
name = "gcsf"
description = "Filesystem based on Google Drive"
version = "0.3.6"
repository = "https://github.com/harababurel/gcsf"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
license = "MIT"
keywords = ["google", "drive", "fuse", "filesystem"]
exclude = ["build/**/*.o", "doc/**/*.html", "client_secret.json", "/ci/*"]
edition = "2024"


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
ctrlc = "3.5.1"
failure = "0.1.8"
fuser = { version = "0.16", features = ["libfuse"] }
futures = {version =  "0.3.31", features = ["executor"]}
google-drive3 = "=6.0.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1.11"
id_tree = "1.8.0"
lazy_static = "1.5.0"
libc = "0.2.178"
log = "0.4.29"
lru_time_cache = "0.11.11"
maplit = "1.0.2"
mime-sniffer = "0.1.3"
pretty_env_logger = "0.5.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.147"
time = "0.3"
tokio = { version = "1.48", features = ["full"] }
url = "2"
urlencoding = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
xdg = "3.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
